--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ahmed Medhat</title>
-    <link rel="icon" href="icon.png">
+    <link rel="icon" href="icon_black.png">
 </head>
 <body>
     
